# textual-editor

./: LICENSE  README.md  pyproject.toml
textual_editor/: __init__.py  __main__.py  app.py  app.tcss  main.py
