[tool.poetry]
name = "textual_editor"
version = "0.1.0"
description = ""
authors = ["kyrlian <kyrlian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = {extras = ["syntax"], version = "^0.76.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ted = "textual_editor.app:main"