[project]
name = "textual-editor"
version = "0.1.0"
description = ""
authors = [{name ="kyrlian, email= kyrlian@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "textual>=0.79.1",
]

[project.scripts]
ted = "textual_editor.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
